--- a/bleeplib/src/main/AndroidManifest.xml
+++ b/bleeplib/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.advantech.bleeplib">
 
-    <!--藍牙管理-->
+    <!--Bluetooth management-->
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <!--藍牙操作權限-->
+    <!--Bluetooth operation permissions-->
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -12,7 +12,7 @@
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <!-- Android 手機支持 BLE 才能從 Google Play 下載 -->
+    <!-- Android phones must support BLE for downloading from Google Play -->
     <uses-feature
         android:name="android.hardware.bluetooth_le"
         android:required="true" />
